--- a/vignettes/extending.Rmd
+++ b/vignettes/extending.Rmd
@@ -9,7 +9,6 @@ vignette: >
 
 ```{r, include = FALSE}
 knitr::opts_chunk$set(comment = "#>", collapse = TRUE)
-library(roxygen2)
 ```
 
 ## Basics
@@ -30,6 +29,11 @@ It is worth noting that it is not possible for a user to extend
 included roclets (e.g. the `rd` roclet) to allow for new tags. 
 It is necessary to write a new roclet that can be used together with or instead of e.g. 
 the included `rd` roclet.
+
+```{r setup}
+library(roxygen2)
+```
+
 
 ## Roclets
 
@@ -103,28 +107,15 @@ Thus, we make a roclet to help us catch this earlier.
 The input argument `blocks` to `roclet_process()` is a list of blocks. 
 Below, we show the block from `txt2` to give you an idea of its structure:
 
-```
-List of 2
- $ title: chr "Summing two numbers"
- $ param:List of 2
-  ..$ name       : chr "x"
-  ..$ description: chr "A number"
- - attr(*, "filename")= chr "/tmp/RtmpZx52lH/file2498288d1e88"
- - attr(*, "location")= int [1:8] 5 1 7 1 1 1 5 7
- - attr(*, "call")= language f <- function(x, y) {     x + y ...
- - attr(*, "class")= chr "roxy_block"
- - attr(*, "object")=List of 3
-  ..$ alias  : chr "f"
-  ..$ value  :function (x, y)  
-  ..$ methods: NULL
-  ..- attr(*, "class")= chr [1:2] "function" "object"
+```{r}
+parse_text(txt2)
 ```
 
 Now, we can implement the roclet:
 
 ```{r}
 param_roclet <- function() {
-  roxygen2::roclet("param")
+  roclet("param")
 }
 
 roclet_process.roclet_param <- function(x, blocks, env, base_path, global_options = list()) {
@@ -138,6 +129,8 @@ roclet_process.roclet_param <- function(x, blocks, env, base_path, global_option
     }
     
     fun_args <- formalArgs(block_obj$value)
+    
+    
     block_params <- block[names(block) == "param"]
     block_params_names <- sort(unname(sapply(block_params, function(x) x$name), force = TRUE))
   
@@ -242,20 +235,15 @@ memo_roclet <- function() {
 
 # Based on roxygen2:::tag_name_description
 tag_memo <- function(x) {
-  #print(x)
-  #print(str(x))
-  
-  # Check syntax
   stopifnot(grepl("^\\[.*\\].*$", x$val))
   
-  memo_parsed <- stringi::stri_match(str = x$val, regex = "\\[(.*)\\](.*)")
-  
-  header <- memo_parsed[1L, 2L]
-  msg <- memo_parsed[1L, 3L]
-  
-  x$val <- list(header = header, msg = msg)
-  
-  return(x)
+  parsed <- stringi::stri_match(str = x$val, regex = "\\[(.*)\\](.*)")[1, ]
+
+  x$val <- list(
+    header = parsed[[2]], 
+    message = parsed[[3]]
+  )
+  x
 }
 
 roclet_tags.roclet_memo <- function(x) {
@@ -263,50 +251,28 @@ roclet_tags.roclet_memo <- function(x) {
 }
 
 roclet_process.roclet_memo <- function(x, blocks, env, base_path, global_options = list()) {
-  memos <- list()
-  
-  print(str(blocks))
+  results <- list()
   
   for (block in blocks) {
-    block_memos <- block[names(block) == "memo"]
-    print(str(block_memos))
-    
-    if (length(block_memos) == 0L) {
-      next
+    tags <- block_get_tags(block, "memo")
+
+    for (tag in tags) {
+      msg <- paste0("[", tag$file, ":", tag$line, "] ", tag$val$message)
+      results[[tag$val$header]] <- c(results[[tag$val$header]], msg)
     }
-    
-    for (m in block_memos) {
-      extra <- ""
-      
-      if (!is.null(attr(block, "object")) && 
-          !is.null(attr(block, "object")$alias) &&
-          !is.null(attr(block, "filename"))) {
-        extra <- paste0(" @ '", attr(block, "object")$alias, "' [", attr(block, "filename"), "]")
-      }
-      
-      msg <- paste0(m$msg, extra)
-      memos[[m$header]] <- c(memos[[m$header]], msg)
-    }
-    
   }
   
-  return(memos)
+  results
 }
 
 roclet_output.roclet_memo <- function(x, results, base_path, ...) {
-  if (length(results) == 0L) {
-    return(invisible(NULL))
+  for (header in names(results)) {
+    messages <- results[[header]]
+    cat(paste0(header, ": ", "\n"))
+    cat(paste0(" * ", messages, "\n", collapse = ""))
   }
-  
-  cat("Memos:\n")
-  
-  for (i in seq_along(results)) {
-    cat("  ", names(results)[i], ":\n", sep = "")
-    cat(paste0("    - ", results[[i]], collapse = "\n"), sep = "")
-    cat("\n")
-  }
-  
-  return(invisible(NULL))
+
+  invisible(NULL)
 }
 
 results <- roc_proc_text(memo_roclet(), "
@@ -320,7 +286,7 @@ f <- function(x, y) {
 g <- function(x, y) {
   # ...
 }
-", registry = roclet_tags.roclet_memo())
+")
 roclet_output(memo_roclet(), results)
 ```
 
